--- a/lesson/5th/src/Dockerfile
+++ b/lesson/5th/src/Dockerfile
@@ -1,8 +1,13 @@
 FROM python:latest
+
+ARG UID=1000
+ARG GID=1000
+ARG USERNAME=app
+ARG GROUPNAME=app
+
+RUN groupadd -g $GID $GROUPNAME && \
+    useradd -m -u $UID -g $GID $USERNAME
+COPY --chown=$UID:$GID ./ /usr/src/app
 WORKDIR /usr/src/app
-RUN groupadd -g 1100 app_user && \
-    useradd -m -s /bin/bash -u 1100 -g 1100 app_user
-RUN chown -R app_user:app_user /usr/src/app
-USER app_user
-COPY ./requirements.txt .
+USER $USERNAME
 RUN pip install --no-cache-dir -r requirements.txt
