結構色々変更memo追加

--- a/lesson/5th/src/Dockerfile
+++ b/lesson/5th/src/Dockerfile
@@ -1,13 +1,12 @@
 FROM python:latest
 
-ARG UID=1000
-ARG GID=1000
-ARG USERNAME=app
-ARG GROUPNAME=app
+# ARG UID=1000
+# ARG GID=1000
+# ARG USERNAME=app
+# ARG GROUPNAME=app
 
-RUN groupadd -g $GID $GROUPNAME && \
-    useradd -m -u $UID -g $GID $USERNAME
-COPY --chown=$UID:$GID ./ /usr/src/app
+# RUN groupadd -g $GID $GROUPNAME
+# RUN useradd -m -u $UID -g $GID $USERNAME
+# COPY --chown=$UID:$GID ./ /usr/src/app
 WORKDIR /usr/src/app
-USER $USERNAME
-RUN pip install --no-cache-dir -r requirements.txt
+# USER $USERNAME
