--- a/lesson/6th/compose.yml
+++ b/lesson/6th/compose.yml
@@ -5,4 +5,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./src:/usr/src/app
+    env_file: ./src/.env
+    ports:
+      - 5000:5000
+    init: true
     tty: true
