--- a/lesson/5th/src/Dockerfile
+++ b/lesson/5th/src/Dockerfile
@@ -1,12 +1,11 @@
 FROM python:latest
 
-# ARG UID=1000
-# ARG GID=1000
-# ARG USERNAME=app
-# ARG GROUPNAME=app
+ARG UID=1000
+ARG GID=1000
+ARG USERNAME=app
+ARG GROUPNAME=app
 
-# RUN groupadd -g $GID $GROUPNAME
-# RUN useradd -m -u $UID -g $GID $USERNAME
-# COPY --chown=$UID:$GID ./ /usr/src/app
+RUN groupadd -g $GID $GROUPNAME
+RUN useradd -m -u $UID -g $GID $USERNAME
 WORKDIR /usr/src/app
-# USER $USERNAME
+USER $USERNAME
