RUN コマンドのUpdateを修正

--- a/lesson/2nd/Dockerfile
+++ b/lesson/2nd/Dockerfile
@@ -1,5 +1,4 @@
 FROM python:latest
 WORKDIR /usr/src/app
 COPY ./folder1 ./
-RUN apt update
-RUN apt install tree
+RUN apt update && apt install -y tree
